split_em_up. leave_k_out. many new scripts

--- a/scripts/exercise_feature_weighted_rf.ipynb
+++ b/scripts/exercise_feature_weighted_rf.ipynb
@@ -47,17 +47,14 @@
    },
    "outputs": [],
    "source": [
-    "Df, Do, Db = 2,2,1 ##number of sp. freq. bands, number of orientations, and 1 dimension for bias feature (=1)\n",
-    "D = Df*Do+Db  ##number of feature maps\n",
-    "T = 100  ##number of data samples\n",
-    "Gx,Gy,Gw = 4,4,Df   ##coarse grid of r.f. params (centers/widths)\n",
-    "G = Gx*Gy*Gw   ##total number of r.f. grid points. defines dimensions of prediction menu\n",
-    "V = 30   ##voxels (chunksize)\n",
-    "stim_size = 8 ##number of pixels in stimuli (on a side)\n",
-    "n_image_channels = 1 ##could be 3 for color images.\n",
-    "\n",
-    "\n",
-    "\n"
+    "Df, Do, Db = 2,2,1   ##number of sp. freq. bands, number of orientations, and 1 dimension for bias feature (=1)\n",
+    "D = Df*Do+Db         ##number of feature maps\n",
+    "T = 100              ##number of data samples\n",
+    "Gx,Gy,Gw = 4,4,Df    ##coarse grid of r.f. params (centers/widths)\n",
+    "G = Gx*Gy*Gw         ##total number of r.f. grid points. defines dimensions of prediction menu\n",
+    "V = 30               ##voxels (chunksize)\n",
+    "stim_size = 8        ##number of pixels in stimuli (on a side)\n",
+    "n_image_channels = 1 ##could be 3 for color images.\n"
    ]
   },
   {
