--- a/scripts/feature_weighted_crcns_vers_1p1.ipynb
+++ b/scripts/feature_weighted_crcns_vers_1p1.ipynb
@@ -661,7 +661,8 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
